--- a/canvas.html
+++ b/canvas.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset="utf-8"/>
     <title></title> 
-    
+  <script>  
     function init(){
        var canvas, ctx, pattern;
       canvas= document.querySelector("#mycanvas");
@@ -27,6 +27,7 @@
                           
          }
     }
+    </script>
   </head>
   <body onload="init()">
     <canvas id ="mycanvas"></canvas>
