--- a/canvas.html
+++ b/canvas.html
@@ -1,8 +1,14 @@
+
 <!doctype html>
 <html>
   <head>
   <meta charset="utf-8"/>
-    <title></title> 
+    <title></title>
+    <style>
+     #myCanvas {
+         border: 1px solid black;
+     }
+ </style>
   <script> 
     
  var canvas, ctx, grdFrenchFlag;
@@ -45,7 +51,7 @@ function drawCheckboard(n) {
     </script>
   </head>
   <body onload="init()">
-    <canvas id ="myCanvas"></canvas>
+    <canvas id ="myCanvas" width="300" height="300"></canvas>
   
   </body>
 
