--- a/canvas.html
+++ b/canvas.html
@@ -37,8 +37,7 @@
 
                 drawRotatingVideo(480, 90);
 
-                ctx.drawImage(video, 0, 180, 320, 180);
-                ctx.drawImage(video, 320, 180, 320, 180);
+                
             }
 
             function drawRotatingVideo(x, y) {
@@ -65,7 +64,7 @@
     <body onload="init()" >
         <p>This is a &lt;video&gt; element: </p>
         <video id="sourcevid" autoplay loop>
-            <source src="http://mainline.i3s.unice.fr/mooc/BigBuckBunny_640x360.mp4" type="video/mp4" />
+            <source src="" type="video/mp4" />
             <source src="http://mainline.i3s.unice.fr/mooc/BigBuckBunny_640x360.ogv" type="video/ogg"/>
         </video>
         <p>This is a &lt;canvas&gt; element: </p>
