--- a/canvas.html
+++ b/canvas.html
@@ -22,7 +22,7 @@
             function init() {
                 video = document.getElementById('sourcevid');
                 canvas = document.getElementById('myCanvas');
-                ctx = canvas.getContext('2d');
+              ctx = canvas.getContext('2d');
 
                 setInterval("processFrame()", 25);
             }
@@ -64,7 +64,7 @@
     <body onload="init()" >
         <p>This is a &lt;video&gt; element: </p>
         <video id="sourcevid" autoplay loop>
-            <source src="" type="video/mp4" />
+            <source src="assignment.mp4" type="video/mp4" />
             <source src="http://mainline.i3s.unice.fr/mooc/BigBuckBunny_640x360.ogv" type="video/ogg"/>
         </video>
         <p>This is a &lt;canvas&gt; element: </p>
